feature/#115 - Renamed FindUserCourseByIdUseCase to GetUserCourseByIdUseCase and updated related references; modified CourseMapper to support UserCourseDto and CourseWithStepsDto
